Adding Live wallpaper

--- a/app/src/main/res/layout/realm_list_row.xml
+++ b/app/src/main/res/layout/realm_list_row.xml
@@ -16,8 +16,7 @@
         android:layout_alignParentLeft="true"
         android:singleLine="true"
         android:text="Realm Name"
-        android:textSize="12sp"
-        android:textStyle="bold"
-      />
+        android:textSize="14dip"
+        android:textStyle="bold" />
 
 </RelativeLayout>
