--- a/app/src/main/res/layout/fragment_realm_list.xml
+++ b/app/src/main/res/layout/fragment_realm_list.xml
@@ -55,7 +55,8 @@
                     android:layout_marginLeft="0dp"
                     android:gravity="bottom"
                     android:layout_alignParentBottom="true"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:padding="0dip">
                     <Spinner
                         android:layout_width="0px"
                         android:layout_height="wrap_content"
@@ -64,14 +65,24 @@
                         android:layout_below="@+id/labelRegionSelect"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:spinnerMode="dropdown"
+                        android:layout_gravity="center_vertical" />
                     <TextView
                         android:layout_width="0px"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:id="@+id/labelSelectedServer"
                         android:layout_weight="1"
-                        android:gravity="center_vertical" />
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center_vertical" />
+
+                    <ImageView
+                        android:layout_width="40dip"
+                        android:layout_height="40dip"
+                        android:id="@+id/imageAvatar"
+                        android:layout_weight=".1"
+                        android:layout_gravity="center_vertical" />
                 </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
