--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -8,24 +8,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.digitale.wowpaper.MainActivity$LeagueFragment">
 
-    <!-- Event Line -->
-    <TextView android:id="@+id/labelCompetition"
+    <!-- Scrolling gallery of character profile images -->
+    <HorizontalScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/matchCompetition"
-        android:textStyle="bold" />
+        android:id="@+id/profileScrollView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
-    <TextView android:id="@+id/cCompetition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/competitionName"
-        android:layout_alignBaseline="@+id/labelCompetition"
-        android:layout_toRightOf="@+id/labelCompetition"
-        android:layout_toEndOf="@+id/labelCompetition"
-        android:paddingLeft="15dp" />
-
-    <!-- Event Time -->
+    <!-- List of characters searched for and added to database -->
 
     <ListView
         android:id="@+id/leagueListView"
@@ -34,8 +26,8 @@
         android:clickable="true"
         android:overScrollMode="ifContentScrolls"
         android:paddingTop="20dp"
+        android:layout_below="@+id/profileScrollView"
         android:layout_centerHorizontal="true"
-        android:paddingBottom="?attr/actionBarSize"
-        android:layout_below="@+id/labelCompetition" />
+        android:paddingBottom="?attr/actionBarSize" />
 
 </RelativeLayout>
