--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -28,14 +28,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
             android:layout_weight="1"
-            android:src="@mipmap/ic_everton"
+            android:src="@drawable/favouritesadd"
             android:layout_gravity="left" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
-            android:src="@mipmap/ic_bournemouth"
+            android:src="@drawable/favouritesremove"
             android:layout_weight="1"
             android:layout_gravity="left" />
 
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView3"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/delete"
             android:layout_weight="1"
             android:layout_gravity="left" />
     </LinearLayout>
