Wallpaper Engine updates
wallpaper now display random profile pictures loaded from Sqlite
database

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,13 +8,13 @@
             android:title="Android"
             android:visible="true"/>
         <item
-            android:id="@+id/evertonSkin"
+            android:id="@+id/allianceSkin"
             android:menuCategory="secondary"
-            android:title="Everton"
+            android:title="Alliance"
             android:visible="true"/>
         <item
-            android:id="@+id/bournmouthSkin"
+            android:id="@+id/hordeSkin"
             android:menuCategory="secondary"
-            android:title="Bournmouth"
+            android:title="Horde"
             android:visible="true"/>
 </menu>
