--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">4dp</dimen>
+    <dimen name="activity_vertical_margin">4dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
 
 
@@ -17,4 +17,6 @@
         <dimen name="staggered_child_xlarge">400dp</dimen>
 
 
+    <item name="alliance_disabled_alpha_material_light" type="dimen" format="float">0.33</item>
+    <item name="horde_disabled_alpha_material_light" type="dimen" format="float">0.33</item>
 </resources>
