--- a/app/src/main/res/layout/fragment_realm_list.xml
+++ b/app/src/main/res/layout/fragment_realm_list.xml
@@ -24,6 +24,48 @@
             android:foregroundGravity="fill_vertical">
 
             <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:id="@+id/llSearchBar"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="0dp"
+                android:gravity="bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_weight="1">
+
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editSearchText"
+                    android:text="Ameelia"
+                    android:layout_below="@+id/realmListView"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:inputType="text"
+                    android:hint="Character Name"
+                    android:layout_weight="7" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fill"
+                    android:id="@+id/buttonFill"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buttonSearchText"
+                    android:id="@+id/buttonSearch"
+                    android:layout_below="@+id/realmListView"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="0px"
@@ -103,41 +145,6 @@
                     android:layout_below="@+id/labelServerSelect"
                     android:layout_centerHorizontal="true"
                     android:layout_weight="1.89" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0px"
-                android:id="@+id/llSearchBar"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="0dp"
-                android:gravity="bottom"
-                android:layout_alignParentBottom="true"
-                android:layout_weight="1">
-
-                <EditText
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editSearchText"
-                    android:text="Ameelia"
-                    android:layout_below="@+id/realmListView"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:inputType="text"
-                    android:hint="Character Name"
-                    android:layout_weight="6" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/buttonSearchText"
-                    android:id="@+id/buttonSearch"
-                    android:layout_below="@+id/realmListView"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_weight="1" />
             </LinearLayout>
 
         </LinearLayout>
