--- a/app/src/main/res/xml/wallpaper.xml
+++ b/app/src/main/res/xml/wallpaper.xml
@@ -2,7 +2,7 @@
 <wallpaper
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:label="WoW Wallpaper"
-    android:thumbnail="@mipmap/ic_launcher"
+    android:thumbnail="@mipmap/wallpaper_thumbnail"
     android:description="@string/wallpaper_description"
     android:settingsActivity="com.digitale.wowpaper.MainActivity">
 </wallpaper>
